# control-sci

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSES.md  Dockerfile  LICENSE  PUBLIC_RELEASE_MANIFEST.md  README.md  README.zh.md  REPRODUCIBILITY.md  SECURITY.md  _verify_env.py  build_benchmark.ps1  docker-compose.yml  pyproject.toml  reproduce.sh  requirements.txt  run_agent.ps1  run_evaluation.ps1  run_medbench_vlm.ps1  run_medical_agent.ps1  run_minimal_repro.ps1  run_reviewer_demo.ps1  run_task3_rag_flywheel.ps1  verify_task3_demo.ps1
_final_submission_by_track/: README.md
analyze/: __init__.py  run_all.py
benchmark/: README.md  medbench_sciverse_wrapper.py  sciverse_content_audit.py  sciverse_coverage.py  sciverse_cross_source_eval.py  sciverse_leaderboard.py  sciverse_medical_closure.py  sciverse_medical_closure_v2.py  sciverse_medical_closure_v3.py  sciverse_medical_expansion.py  sciverse_qlora_probe.py  sciverse_qlora_train.py  sciverse_subfield_comparison.py  sciverse_visual_download.py
cloud_demo_standalone/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deploy_ubuntu_docker.md  docker-compose.yml  requirements.txt  start.ps1  start_workbench.ps1  verify.ps1  verify_docker.ps1  verify_workbench.ps1
controlsci/: __init__.py
data/: arxiv-batch-01.txt  arxiv-batch-02.txt  arxiv-batch-03.txt  medical_terminology.json  textbook-batch-01.txt  textbook-batch-02.txt
docs/: DATA-TRACE.md
notebooks/: _run_e3b_demo.py  control_sci_demo.ipynb
pipeline/: _arxiv_page_stats.py  _check_cp.py  (+27 more)
(+29213 files in other folders)
